bk_ida/gccida/c2/adjust_address_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2439:36: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  adjust_address_1( rtx memref, machine_mode mode, __int64 offset, int validate, int adjust) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2444:4: error: expected ';' after expression
rtx v13; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2444:5: error: use of undeclared identifier 'v13'
rtx v13; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2445:4: error: expected ';' after expression
rtx v14; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2445:5: error: use of undeclared identifier 'v14'
rtx v14; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2446:4: error: expected ';' after expression
rtx v15; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2446:5: error: use of undeclared identifier 'v15'
rtx v15; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2447:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2448:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2450:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2451:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2451:5: error: use of undeclared identifier 'v20'
rtx v20; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2452:4: error: expected ';' after expression
rtx v21; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2452:5: error: use of undeclared identifier 'v21'; did you mean 'v11'?
rtx v21; // r14 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2442:9: note: 'v11' declared here
__int64 v11; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2454:4: error: expected ';' after expression
rtx v23; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2454:5: error: use of undeclared identifier 'v23'; did you mean 'v22'?
rtx v23; // r12 
    ^~~
    v22
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2453:9: note: 'v22' declared here
__int64 v22; // rdx 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2460:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2460:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/emit-rtl.c:2472:1: error: use of undeclared identifier '_OWORD'
_OWORD *v41; // rax 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/adjust_address_1/src/obj/emit-rtl.o] Error 1
